# ScreenRecorder-Py

./: .env  .gitignore  app.py  core.py  pyproject.toml  requirements.txt  run_server.bat  schedule_the_app.bat  service_account.json  unschedule_the_app.bat
static/templates/: index.html
