[tool.poetry]
name = "screenrecordingproject"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.11.0.86"
pyautogui = "^0.9.54"
mss = "^10.0.0"
schedule = "^1.2.2"
google-api-python-client = "^2.166.0"
google-auth = "^2.38.0"
python-dotenv = "^1.1.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
